[FIX] Backlinks button overlapping in FF and IE
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@35797 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -2218,7 +2218,7 @@ div.aclabel, span.aclabel, label.aclabel {
 	display: inline-block;
 	vertical-align: middle;
 	background: none;
-	width: 0px;
+	width: 20px;
 }
 .backlinks_button .cssmenu_horiz ul li {
 	border: 1px solid #999;
